# OpenGravity

./: .gitignore  AGENTS.md  OPENGRAVITY.md  README.md  eslint.config.js  package-lock.json  package.json  product.json  tsconfig.json
apps/desktop-shell/: README.md  index.html  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/desktop-shell/scripts/: run-shell-state-test.mjs  run-tauri.mjs
apps/desktop-shell/src/: AgentActionPlanView.tsx  App.tsx  TerminalSurface.tsx  agent-action-state.test.ts  agent-action-state.ts  agent-edit-preview.test.ts  agent-edit-preview.ts  chat-state.test.ts  chat-state.ts  editor-state.test.ts  editor-state.ts  github-state.ts  integrations-state.test.ts  integrations-state.ts  multiagent-state.test.ts  multiagent-state.ts  native-bridge.ts  openrouter-chat.ts  permission-state.test.ts  permission-state.ts  provider-catalog.test.ts  provider-catalog.ts  provider-radar-state.test.ts  provider-radar-state.ts  repository-state.test.ts  repository-state.ts  settings-state.test.ts  settings-state.ts  shell-state.test.ts  shell-state.ts  skills-state.test.ts  skills-state.ts  styles.css  (+11 more)
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/src/: main.rs
docs/: adr-0001-hybrid-shell.md  master-plan.md  opengravity-v1-architecture.md  security-notes.md  upstream-reuse-strategy.md
extensions/opengravity-agent/: README.md  extension.js  package.json
mockups/: opengravity-desktop-concept.html
scripts/opengravity/: validate-bootstrap.js
services/orchestrator/: README.md  package.json
(+23 files in other folders)
